--- a/index.html
+++ b/index.html
@@ -33,26 +33,11 @@
     <div class="page">
       <div class="navbar">
         <div class="navbar-inner">
-          <div class="title">Left Panel</div>
+          <div class="title">Menu</div>
         </div>
       </div>
       <div class="page-content">
-        <div class="block">Left panel content goes here</div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Right panel with reveal effect-->
-<div class="panel panel-right panel-reveal theme-dark">
-  <div class="view">
-    <div class="page">
-      <div class="navbar">
-        <div class="navbar-inner">
-          <div class="title">Right Panel</div>
-        </div>
-      </div>
-      <div class="page-content">
-        <div class="block">Right panel content goes here</div>
+        <div class="block">Menu Goes Here</div>
       </div>
     </div>
   </div>
@@ -106,7 +91,7 @@
             <p><span style="font-weight: 400;">(See Participant Manual, Section 1:2 for full info)</span></p>
           </div>
         </div>
-        ... </div>
+       </div>
     </div>
   </div>
 </div>
