--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="left"> <a href="#" class="link icon-only panel-open" data-panel="left"> <i class="icon f7-icons ios-only">menu</i> <i class="icon material-icons md-only">menu</i> </a> </div>
-        <div class="title sliding">My App</div>
+        <div class="title sliding">Solutions Finder</div>
         <div class="right"> <a href="#" class="link icon-only panel-open" data-panel="right"> <i class="icon f7-icons ios-only">menu</i> <i class="icon material-icons md-only">menu</i> </a> </div>
       </div>
     </div>
