--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="framework7/css/framework7.bundle.min.css">
 <link rel="stylesheet" href="css/icons.css">
 <link rel="stylesheet" href="css/app.css">
-<link rel="stylesheet" href="fonts/framework7-icons.css">
+<link rel="stylesheet" href="css/framework7-icons.css">
 </head>
 <body>
 <div id="app">
